# C60

./: Cargo.toml  README.md  build.rs
src/: main.rs  polyhedron.rs
src/polyhedron/: c60.rs  dodecahedron.rs  icosahedron.rs
