[package]
name = "c60"
version = "0.5.0" # change with html_root_url in main.rs
edition = "2021"
authors = ["nomissbowling <nomissbowling@yahoo.co.jp>"]

description = "c60 (Fullerene) on the ODE (Open Dynamics Engine) for Rust"
keywords = ["opengl", "dynamics", "c60", "fullerene", "3D"]
categories = ["simulation", "rendering", "science", "external-ffi-bindings"]
license = "MIT"

documentation = "https://docs.rs/c60/"
homepage = "https://crates.io/crates/c60"
repository = "https://github.com/nomissbowling/c60"

readme = "README.md"

#build = "build.rs"

[dependencies]
polyhedron-faces = { version = "0.4" }
Fullerene = { version = "0.4" }
trimesh = { version = "0.4" }

anyslot = { version = "0.1" }

regex = { version = "1.10" } # "1.10.4"

num = { version = "0.4" } # "0.4.1"

asciiz = { version = "0.1" }

ode-rs = { version = "1.1" }

home = { version = "=0.5.5" } # cc(1.0.79)/bindgen(0.65.1) requires home(0.5.5)

[build-dependencies]
cc = "=1.0.79"
bindgen = "=0.65.1"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
